# IronOS

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ironos_map.json  make_ironos_bitcode.py  meson.build
Development Resources/: force_blank_flash.hex
Documentation/: DebugMenu.md  Flashing.md  Logo.md
Translations/: TranslationEditor.html  translation_EN.json  translation_NL.json  translation_YUE_HK.json  translation_ZH_CN.json  translation_ZH_TW.json  translations_def.js
source/: Makefile
source/Core/BSP/: BSP.h  BSP_Flash.h  BSP_PD.h  BSP_QC.h  Defines.h
source/Core/BSP/MHP30/: BSP.cpp  FreeRTOSConfig.h  I2C_Wrapper.cpp  IRQ.cpp  IRQ.h  Pins.h  QC_GPIO.cpp  Setup.h  Software_I2C.h  ThermoModel.cpp  flash.c  preRTOS.cpp  stm32f103.ld  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_TIM.c  stm32f1xx_it.c  system_stm32f1xx.c
source/Core/BSP/Miniware/: BSP.cpp  I2C_Wrapper.cpp  IRQ.cpp  IRQ.h  Pins.h  QC_GPIO.cpp  README.md  Setup.h  Software_I2C.h  ThermoModel.cpp  flash.c  port.c  preRTOS.cpp  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_TIM.c  stm32f1xx_it.c  system_stm32f1xx.c
source/Core/BSP/Pine64/: BSP.cpp  Debug.cpp  Debug.h  I2C_Wrapper.cpp  IRQ.cpp  IRQ.h  Pins.h  QC_GPIO.cpp  README.md  Setup.h  ThermoModel.cpp  UnitSettings.h  flash.c  preRTOS.cpp
source/Core/Drivers/: BMA223.cpp  BMA223.hpp  BMA223_defines.h  Buttons.cpp  Buttons.hpp  Font.h  I2CBB.cpp  I2CBB.hpp  I2C_Wrapper.hpp  LIS2DH12.cpp  LIS2DH12.hpp  LIS2DH12_defines.hpp  MMA8652FC.cpp  MMA8652FC.hpp  MMA8652FC_defines.h  MSA301.cpp  MSA301.h  MSA301_defines.h  OLED.hpp  README.md  SC7A20.cpp  SC7A20.hpp  SC7A20_defines.h  Si7210.cpp  Si7210.h  Si7210_defines.h  WS2812.h
source/Core/Inc/: FreeRTOSHooks.h  QC3.h  Translation.h  settingsGUI.hpp  stm32f1xx_hal_conf.h  stm32f1xx_it.h
source/Core/Src/: FreeRTOSHooks.c  QC3.cpp  freertos.c  syscalls.c
source/Core/Threads/: MOVThread.cpp  PIDThread.cpp  POWThread.cpp
subprojects/: .gitignore
